Change URL of website

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Marc Prange - Earth System Scientist
 # Website URL
-baseURL: 'https://smpljack.github.io/'
+baseURL: 'https://mprange.github.io/'
 
 ############################
 ## LANGUAGE
